--- a/app/views/to_kansujis/index.slim
+++ b/app/views/to_kansujis/index.slim
@@ -9,7 +9,7 @@
     .panel-heading
       h4
         | Your input:
-        = @exp
+        = "%e" %@input
     .panel-body
       h3
         = @input
