--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -9,3 +9,8 @@
   /* Set the fixed height of the footer here */
   height: 60px
   background-color: #f5f5f5
+.input__margin--top-bottom
+  margin: 30px 0
+.height__input--row2
+  height: 50px
+  justify-content: center
