--- a/app/views/to_numbers/index.slim
+++ b/app/views/to_numbers/index.slim
@@ -3,7 +3,7 @@
     |Kanji to Number
   div.form-group
     form.text-center action=to_numbers_path
-      textarea.col-xs-12.form-control name='input' type='text' rows='5'
+      textarea.col-xs-12.form-control.input__margin--top-bottom name='input' type='text' rows='2'
       input.btn.btn-primary type='submit' value='Translate to Number' /
   .panel.panel-info
     .panel-heading
