--- a/app/views/to_kansujis/index.slim
+++ b/app/views/to_kansujis/index.slim
@@ -3,13 +3,13 @@
     |Number to Kanji
   div.form-group
     form.text-center action=to_kansujis_path
-      input.col-xs-12.form-control name='input' type='text'
+      input.col-xs-12.form-control.input__margin--top-bottom.height__input--row2 name='input' type='text' rows='2'
       input.btn.btn-primary type='submit' value='Translate to Kanji'
   .panel.panel-info
     .panel-heading
       h4
         | Your input:
-        = "%e" %@input
+        = " #{"%e" %@input}"
     .panel-body
       h3
         = @input
